fixing scrollbar

--- a/src/styles/pages/leaderboard/leaderboard.scss
+++ b/src/styles/pages/leaderboard/leaderboard.scss
@@ -27,7 +27,7 @@ $avatar-size: 25px;
 
   @include breakpoint("m") {
     max-height: none;
-    overflow-y: visible;
+    overflow: visible;
   }
 
   // Scrollbar
